# llamacpp-qdrant-rust-example

./: Cargo.toml
src/: main.rs
src/clients/: mod.rs
src/clients/llm/: llama_cpp.rs  mod.rs
src/clients/vector_store/: qdrant.rs
